--- a/customer-app.html
+++ b/customer-app.html
@@ -1975,7 +1975,7 @@
             
             // Sample product images with multiple images per product
             const productImages = {
-                'FSH-T001': [
+                'APR-T001': [
                     'https://i.postimg.cc/pV6QC3YQ/Whats-App-Image-2025-11-15-at-14-13-23.jpg'
                 ],
                 'FSH-D001': [
