--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
             <div class="nav-links">
                 <a href="index.html" class="nav-link active">Home</a>
                 <a href="workspace.html" class="nav-link">Workspace</a>
-                <a href="marketplace.html" class="nav-link">Marketplace</a>
+                <a href="customer-app.html" class="nav-link">Marketplace</a>
             </div>
             <div class="datetime">
                 <div id="time">10:45 AM</div>
