--- a/customer-app.html
+++ b/customer-app.html
@@ -2469,7 +2469,7 @@
     <header>
         <div class="main-header">
             <div class="logo-container">
-                <img src="https://i.postimg.cc/c4zFGFxn/COLLECTIONS-removebg-preview.png" alt="DSOG STORES" class="logo">
+                <img src="https://i.postimg.cc/c4b0RkNz/Untitled-design-4.webp" alt="DSOG STORES" class="logo">
             </div>
             
             <!-- Search Bar -->
