--- a/customer-app.html
+++ b/customer-app.html
@@ -2916,9 +2916,9 @@
         const franchisees = {
             "nairobi": { 
                 name: "DSOG Nairobi", 
-                whatsapp: "254711111111",
-                manager: "John Maina",
-                location: "Nairobi CBD"
+                whatsapp: "254784599322",
+                manager: "DSOG",
+                location: "Nairobi"
             },
             "mombasa": { 
                 name: "DSOG Mombasa", 
