--- a/customer-app.html
+++ b/customer-app.html
@@ -2553,7 +2553,7 @@
                         <img src="https://i.postimg.cc/L5JdvWSy/20251125-1050-Christmas-Gift-Set-Design-remix-01kawzr8jpft18qb14dsbt6g25.png" alt="Designer Clothing" loading="lazy">
                     </div>
                     <div class="swiper-slide hero-slide">
-                        <img src="https://i.postimg.cc/rsBxWFnV/20251124-0333-Premium-Gift-Box-Design-remix-01kasmbzy2em2r8mx66szk23qq-removebg-preview.webp" alt="Contemporary Art" loading="lazy">
+                        <img src="https://i.postimg.cc/HsGHBpJ7/20251125-1058-Epitome-Christmas-Gift-Box-remix-01kax078d3fwvba1pqpn8pxg3d.png" alt="Contemporary Art" loading="lazy">
                     </div>
                 </div>
                 <div class="swiper-pagination"></div>
