--- a/app.html
+++ b/app.html
@@ -794,7 +794,7 @@
         // Hero slides data
         const heroSlides = [
             {
-                image: 'https://i.postimg.cc/0QdrPbJv/20251125-1050-Christmas-Gift-Set-Design-remix-01kawzr8jnf88sd0qbnvc2y2gm.png',
+                image: 'https://drive.google.com/file/d/1RlJtJ8DyThmO6tcve_5xYIsk9h-od6bJ/view?usp=sharing',
                 title: 'New Arrivals'
             },
             {
