--- a/app.html
+++ b/app.html
@@ -794,7 +794,7 @@
         // Hero slides data
         const heroSlides = [
             {
-                image: 'https://drive.google.com/file/d/1RlJtJ8DyThmO6tcve_5xYIsk9h-od6bJ/view?usp=sharing',
+                image: 'https://drive.google.com/file/d/1RlJtJ8DyThmO6tcve_5xYIsk9h-od6bJ/view',
                 title: 'New Arrivals'
             },
             {
