--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@
         // Hero slides data
         const heroSlides = [
             {
-                image: 'https://i.postimg.cc/xT21TYnC/Whats-App-Image-2025-11-27-at-16-03-19.jpg',
+                image: 'https://i.postimg.cc/7LdTKc7M/Whats-App-Image-2025-11-27-at-16-03-19-removebg-preview.webp',
                 title: 'New Arrivals'
             },
             {
