--- a/erh.html
+++ b/erh.html
@@ -709,7 +709,7 @@
 
         <div class="header-actions">
           <div class="dashboard-nav">
-            <a href="erh.html" id="homeButton">Home</a>
+            <a href="erh-home.html" id="homeButton">Home</a>
             <a href="#" class="active" id="workspaceButton">Workspace</a>
             <a href="analytics.html" id="analyticsButton">Analytics</a>
           </div>
